updating and cleaning file list

--- a/data_scraper_prototype.ipynb
+++ b/data_scraper_prototype.ipynb
@@ -1662,9 +1662,9 @@
    "outputs": [],
    "source": [
     "# output all data files\n",
-    "players_box_outdf.to_json('data/players_full_box_score.json', orient='records')\n",
-    "spurs_outdf.to_json('data/players_spurs_box_score.json', orient = 'records')\n",
-    "opp_outdf.to_json('data/players_opp_box_score.json', orient = 'records')"
+    "players_box_outdf.to_json('data/players_full_box_score.json', orient='index')\n",
+    "spurs_outdf.to_json('data/players_spurs_box_score.json', orient = 'index')\n",
+    "opp_outdf.to_json('data/players_opp_box_score.json', orient = 'index')"
    ]
   },
   {
