updated a small column naming convention

--- a/data_scraper_prototype.ipynb
+++ b/data_scraper_prototype.ipynb
@@ -3565,7 +3565,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rename pts to bench points\n",
+    "\n",
+    "misc_bs_df.rename(columns={'PTS': 'bench_pts'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -3597,7 +3608,7 @@
        "      <th>PTS_2ND_CHANCE</th>\n",
        "      <th>PTS_FB</th>\n",
        "      <th>PTS_OFF_TOV</th>\n",
-       "      <th>PTS</th>\n",
+       "      <th>bench_pts</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3634,12 +3645,12 @@
        "0  0021901314               UTA   25   43       62.0            21.0     9.0   \n",
        "1  0021901314               SAS   24   44       44.0             9.0     9.0   \n",
        "\n",
-       "   PTS_OFF_TOV  PTS  \n",
-       "0         20.0   85  \n",
-       "1         14.0   34  "
+       "   PTS_OFF_TOV  bench_pts  \n",
+       "0         20.0         85  \n",
+       "1         14.0         34  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3650,7 +3661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
