--- a/data_scraper_prototype.ipynb
+++ b/data_scraper_prototype.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "[10 rows x 28 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
        "4   0.357    0.000   1.000"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +972,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
        "12     0     0    0    0   0   0  DNP - Coach's Decision                    "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1658,7 +1658,7 @@
        "25     2     0    0    1   1   2          "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1684,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1703,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1713,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1884,7 +1884,7 @@
        "[4 rows x 25 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1895,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1908,7 +1908,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1919,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1932,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1981,7 +1981,7 @@
        "1               UTA  home"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1998,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2009,7 +2009,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2020,7 +2020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2054,7 +2054,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2065,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2076,7 +2076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2193,7 +2193,7 @@
        "[2 rows x 28 columns]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2204,7 +2204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2217,7 +2217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2233,7 +2233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2350,7 +2350,7 @@
        "[2 rows x 33 columns]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2361,7 +2361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2372,7 +2372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2382,7 +2382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2402,7 +2402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2507,7 +2507,7 @@
        "1                21.0         9.0           62.0    8     5  20   23  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2519,7 +2519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2532,7 +2532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2545,7 +2545,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2556,7 +2556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2569,7 +2569,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2583,7 +2583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2638,7 +2638,7 @@
        "1  0021901314               SAS   24   44"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2651,7 +2651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2703,7 +2703,7 @@
        "3  0021901314               SAS   34"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2717,7 +2717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2782,7 +2782,7 @@
        "1         14.0  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2798,7 +2798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2809,7 +2809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2820,7 +2820,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in list(misc_bs_df.columns[2:]):\n",
+    "    misc_bs_df[col] = misc_bs_df[col].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2858,26 +2868,26 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0021901314</td>\n",
+       "      <td>21901314</td>\n",
        "      <td>UTA</td>\n",
        "      <td>25</td>\n",
        "      <td>43</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>20.0</td>\n",
+       "      <td>62</td>\n",
+       "      <td>21</td>\n",
+       "      <td>9</td>\n",
+       "      <td>20</td>\n",
        "      <td>85</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0021901314</td>\n",
+       "      <td>21901314</td>\n",
        "      <td>SAS</td>\n",
        "      <td>24</td>\n",
        "      <td>44</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>14.0</td>\n",
+       "      <td>44</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>14</td>\n",
        "      <td>34</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2885,16 +2895,16 @@
        "</div>"
       ],
       "text/plain": [
-       "      GAME_ID TEAM_ABBREVIATION  AST  REB  PTS_PAINT  PTS_2ND_CHANCE  PTS_FB  \\\n",
-       "0  0021901314               UTA   25   43       62.0            21.0     9.0   \n",
-       "1  0021901314               SAS   24   44       44.0             9.0     9.0   \n",
+       "    GAME_ID TEAM_ABBREVIATION  AST  REB  PTS_PAINT  PTS_2ND_CHANCE  PTS_FB  \\\n",
+       "0  21901314               UTA   25   43         62              21       9   \n",
+       "1  21901314               SAS   24   44         44               9       9   \n",
        "\n",
        "   PTS_OFF_TOV  bench_pts  \n",
-       "0         20.0         85  \n",
-       "1         14.0         34  "
+       "0           20         85  \n",
+       "1           14         34  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2905,7 +2915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
