worked on rotations script

--- a/rotations_prototype.ipynb
+++ b/rotations_prototype.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "0   24   44    35     9    8    4  15  20  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "0   25   43    31    12    5    7   8  23  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
        "[10 rows x 34 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,11 +704,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def conv_time_to_sec(time):\n",
+    "    \"\"\"\n",
+    "    This function takes a string quarter time marker and converts it to elapsed game time in seconds.\n",
+    "    Input example: '7:12'\n",
+    "    Output example: 288\n",
+    "    \"\"\"\n",
     "    split_time = time.split(':')\n",
     "    # convert time to seconds\n",
     "    # seconds in elapsed time\n",
@@ -719,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,13 +755,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_period_starters_list(period, df, spurs_or_opp):\n",
     "    \"\"\"\n",
     "    This function returns the 5 players which started a certain period.\n",
+    "    It works by acquiring a unique list of players appearing in play by play then\n",
+    "    returning the first 5 names. \n",
     "    \n",
     "    spurs_or_opp = 'spurs' or 'opp'\n",
     "    period is an integer figure between 2-4\n",
@@ -783,6 +790,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_player_out(pbp):\n",
+    "    \"\"\"\n",
+    "    Takes in a substitution play by play line and outputs the last name of the player exiting the game.\n",
+    "    \"\"\"\n",
+    "    split_pbp = pbp.split('FOR')\n",
+    "    return split_pbp[1].strip() # remove all white space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_player_in(pbp):\n",
+    "    \"\"\"\n",
+    "    Takes in a sub play by play line and outputs the last name of the player entering the game.\n",
+    "    \"\"\"\n",
+    "    split_pbp = pbp.split('FOR')\n",
+    "    return split_pbp[0][4:].strip() # remove white space & 'SUB: '"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -798,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,23 +846,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spurs_players_re = re.compile(spurs_re)\n",
+    "opp_players_re = re.compile(opp_re)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get all quarter starters\n",
+    "spurs_second_starters = create_period_starters_list(2, pbp_df, 'spurs')\n",
+    "spurs_third_starters = create_period_starters_list(3, pbp_df, 'spurs')\n",
+    "spurs_fourth_starters = create_period_starters_list(4, pbp_df, 'spurs')\n",
+    "\n",
+    "opp_second_starters = create_period_starters_list(2, pbp_df, 'opp')\n",
+    "opp_third_starters = create_period_starters_list(3, pbp_df, 'opp')\n",
+    "opp_fourth_starters = create_period_starters_list(4, pbp_df, 'opp')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get sub data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get appropriate column for each team\n",
+    "spurs_col = get_col('spurs')[0]\n",
+    "opp_col = get_col('opp')[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grab sub column \n",
+    "spurs_sub_df = pbp_df[\n",
+    "    (pbp_df[spurs_col].notnull()) & # remove None values\n",
+    "    (pbp_df[spurs_col].str.contains('SUB')) # query if it contains subs\n",
+    "][['GAME_ID', 'PERIOD', 'PCTIMESTRING', spurs_col]].copy()\n",
+    "\n",
+    "opp_sub_df = pbp_df[\n",
+    "    (pbp_df[opp_col].notnull()) &\n",
+    "    (pbp_df[opp_col].str.contains('SUB'))\n",
+    "][['GAME_ID', 'PERIOD', 'PCTIMESTRING', opp_col]].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assign total game time\n",
+    "spurs_sub_df['game_time'] = spurs_sub_df.PCTIMESTRING.apply(conv_time_to_sec) + (spurs_sub_df.PERIOD - 1) * (12*60)\n",
+    "opp_sub_df['game_time'] = opp_sub_df.PCTIMESTRING.apply(conv_time_to_sec) + (opp_sub_df.PERIOD - 1) * (12*60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assign columns for player in and out\n",
+    "spurs_sub_df['player_in'] = spurs_sub_df[spurs_col].apply(split_player_in)\n",
+    "spurs_sub_df['player_out'] = spurs_sub_df[spurs_col].apply(split_player_out)\n",
+    "\n",
+    "opp_sub_df['player_in'] = opp_sub_df[opp_col].apply(split_player_in)\n",
+    "opp_sub_df['player_out'] = opp_sub_df[opp_col].apply(split_player_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Belinelli', 'Murray', 'Samanic', 'Metu', 'Eubanks']"
+       "Index(['GAME_ID', 'PERIOD', 'PCTIMESTRING', 'VISITORDESCRIPTION', 'game_time',\n",
+       "       'player_in', 'player_out'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "second_q_starters = create_period_starters_list(4, pbp_df, 'spurs')\n",
-    "second_q_starters"
+    "spurs_sub_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter out unnecessary columns\n",
+    "# Remove time string and pbp column\n",
+    "spurs_sub_df = spurs_sub_df[['GAME_ID', 'PERIOD', 'game_time', 'player_in', 'player_out']]\n",
+    "opp_sub_df = opp_sub_df[['GAME_ID', 'PERIOD', 'game_time', 'player_in', 'player_out']]"
    ]
   },
   {
@@ -843,16 +978,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "any(l_name in sec_q_pbp.iloc[0].VISITORDESCRIPTION for l_name in spurs_last_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# find starters for each team\n",
     "# at the start of each quarter, track down the five players initally in the game"
    ]
   }
