updated shot data scripts and added two test files

--- a/rotations_prototype.ipynb
+++ b/rotations_prototype.ipynb
@@ -692,7 +692,7 @@
    ],
    "source": [
     "pbp_df = pbp[0].get_data_frame()\n",
-    "pbp_df.head(n=10)"
+    "pbp_df.head(n=5)"
    ]
   },
   {
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,6 +815,36 @@
     "    \"\"\"\n",
     "    split_pbp = pbp.split('FOR')\n",
     "    return split_pbp[0][4:].strip() # remove white space & 'SUB: '"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def round_game_time(time_mark):\n",
+    "    \"\"\"\n",
+    "    This function takes a time mark in seconds as an input and outputs \n",
+    "    a rounded minute figure. \n",
+    "    \n",
+    "    Inputs should be converted to seconds before use. \n",
+    "    \n",
+    "    Outputs are rounded to the nearest 30 second marker.\n",
+    "    \n",
+    "    Example: \n",
+    "    Input: 238\n",
+    "    Output: 240\n",
+    "    \"\"\"\n",
+    "    minute_markers = [i*60 for i in range(1, 49)]\n",
+    "    for i in range(len(minute_markers)):\n",
+    "        diff = abs(minute_markers[i] - time_mark)\n",
+    "        if diff <= 30:\n",
+    "            return minute_markers[i]\n",
+    "        elif diff <= 60:\n",
+    "            return minute_markers[i+1]\n",
+    "        else:\n",
+    "            continue"
    ]
   },
   {
@@ -833,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,17 +876,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# compile regex patterns\n",
     "spurs_players_re = re.compile(spurs_re)\n",
     "opp_players_re = re.compile(opp_re)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +975,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,11 +1005,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# at the start of each quarter, track down the five players initally in the game"
+    "# create a dictionary with players as keys and sub in times\n",
+    "# create a dict of sub out times\n",
+    "# clean up times to fit into one minute bins\n",
+    "# minute start times also become dataframe columns\n",
+    "# check starters for quarter start times - 0, 720, 1440, 2160\n",
+    "# \n",
+    "\n",
+    "\n",
+    "spurs_subs_in = dict()\n",
+    "spurs_subs_out = dict()\n",
+    "opp_subs_in = dict()\n",
+    "opp_subs_out = dict() \n",
+    "\n",
+    "# A list of quarter start times in seconds\n",
+    "quarter_start_times = [i*720 for i in range(0, 4)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# append the rounded game time to a new column\n",
+    "spurs_sub_df['rounded_game_time'] = spurs_sub_df.game_time.apply(round_game_time)\n",
+    "opp_sub_df['rounded_game_time'] = opp_sub_df.game_time.apply(round_game_game)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. add quarter starts \n",
+    "# 2. go through each time to add 1 or 0\n",
+    "\n",
+    "spurs_quarter_starts = [spurs_starters, spurs_second_starters, \\\n",
+    "                       spurs_third_starters, spurs_fourth_starters]\n",
+    "\n",
+    "opp_quarter_starts = [opp_starters, opp_second_starters, \\\n",
+    "                     opp_third_starters, opp_fourth_starters]\n",
+    "\n",
+    "for i in range(4):\n",
+    "    \n",
+    "\n",
+    "# decide if sub out equates to 1 or 0\n",
+    "# same with sub in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lookup_full_name(last_name, roster):\n",
+    "    \"\"\"\n",
+    "    This function takes a player's last name and outputs his full name.\n",
+    "    \n",
+    "    The input should also include a roster list of full names.\n",
+    "    \n",
+    "    Example:\n",
+    "    Input: Johnson\n",
+    "    Output: Keldon Johnson\n",
+    "    \"\"\"\n",
+    "    for name in roster:\n",
+    "        if name.endswith(last_name):\n",
+    "            return name\n",
+    "        else:\n",
+    "            continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36            Marco Belinelli\n",
+       "52     Quinndary Weatherspoon\n",
+       "71               Drew Eubanks\n",
+       "80           Lonnie Walker IV\n",
+       "81              Chimezie Metu\n",
+       "98            Dejounte Murray\n",
+       "143            Keldon Johnson\n",
+       "144          Lonnie Walker IV\n",
+       "177              Jakob Poeltl\n",
+       "178           Marco Belinelli\n",
+       "192           Dejounte Murray\n",
+       "200              Drew Eubanks\n",
+       "210              Luka Samanic\n",
+       "288           Marco Belinelli\n",
+       "290             Chimezie Metu\n",
+       "309              Drew Eubanks\n",
+       "338           Dejounte Murray\n",
+       "342              Luka Samanic\n",
+       "391            Keldon Johnson\n",
+       "392          Lonnie Walker IV\n",
+       "424              Drew Eubanks\n",
+       "425              Luka Samanic\n",
+       "442           Dejounte Murray\n",
+       "Name: player_in, dtype: object"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spurs_sub_df.player_in.apply(lookup_full_name, args=(spurs_roster, ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36               Luka Samanic\n",
+       "52           Lonnie Walker IV\n",
+       "71               Jakob Poeltl\n",
+       "80             Keldon Johnson\n",
+       "81            Dejounte Murray\n",
+       "98     Quinndary Weatherspoon\n",
+       "143           Dejounte Murray\n",
+       "144           Marco Belinelli\n",
+       "177            Keldon Johnson\n",
+       "178              Drew Eubanks\n",
+       "192              Luka Samanic\n",
+       "200             Chimezie Metu\n",
+       "210          Lonnie Walker IV\n",
+       "288           Dejounte Murray\n",
+       "290              Luka Samanic\n",
+       "309              Jakob Poeltl\n",
+       "338          Lonnie Walker IV\n",
+       "342            Keldon Johnson\n",
+       "391              Drew Eubanks\n",
+       "392              Luka Samanic\n",
+       "424           Dejounte Murray\n",
+       "425           Marco Belinelli\n",
+       "442             Chimezie Metu\n",
+       "Name: player_out, dtype: object"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spurs_sub_df.player_out.apply(lookup_full_name, args=(spurs_roster, ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Walker IV'"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Apply full names to player in and player out"
    ]
   }
  ],
