adding updated scratch notebooks

--- a/data_scraper_prototype.ipynb
+++ b/data_scraper_prototype.ipynb
@@ -259,12 +259,35 @@
     }
    ],
    "source": [
-    "for player in spurs_roster:\n",
+    "# was having trouble with some player shots charts\n",
+    "# this is taking a look at which players cannot be found yet\n",
+    "for player in spurs_roster: \n",
     "    try:\n",
     "        playerid = find_players_by_full_name(player)[0]['id']\n",
     "        print('{}'.format(player))\n",
     "    except:\n",
     "        print('{} was not found'.format(player))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nba_api.stats.static.players import get_active_players\n",
+    "all_players = get_active_players()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for player in all_players:\n",
+    "    if player['first_name'] == 'Tre':\n",
+    "        print('Tre Jones')"
    ]
   },
   {
