--- a/get_shots_data.ipynb
+++ b/get_shots_data.ipynb
@@ -22,11 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "season = '2019-20'"
+    "season = '2020-21'"
    ]
   },
   {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +51,30 @@
     "from nba_api.stats.endpoints import ShotChartLineupDetail\n",
     "from nba_api.stats.endpoints import ShotChartDetail\n",
     "from nba_api.stats.endpoints import BoxScorePlayerTrackV2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'id': 200752,\n",
+       " 'full_name': 'Rudy Gay',\n",
+       " 'first_name': 'Rudy',\n",
+       " 'last_name': 'Gay',\n",
+       " 'is_active': True}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "find_players_by_full_name('Rudy Gay')[0]"
    ]
   },
   {
